# teach

./: CMakeLists.txt  Makefile
.cache/clangd/index/: a.cpp.CE19330663B8372C.idx  a.h.1E9462863355E6D7.idx  main.cpp.3652BC282051011A.idx
include/: a.h
src/: a.cpp  main.cpp
